# mirror

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  GODOT_SETUP.md  LICENSE  Makefile  QUICK_START.md  README.md  coverage.xml  debug_workers.py  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  test_processing.py  test_system.py
godot_client/: Avatar.gd  Avatar.gd.uid  Avatar.tscn  AvatarMirrorClient.gd  AvatarMirrorClient.gd.uid  MirrorDemo.gd  MirrorDemo.gd.uid  MirrorDemo.tscn  README.md  icon.svg.import  project.godot
html/: wave-billiards-webgl.html
scripts/: setup_face_swap.py  setup_models.py
src/: __init__.py  main.py
src/background_removal/: __init__.py  processor.py
src/face_detection/: __init__.py  detector.py
src/face_swap/: __init__.py  deep_live_cam_wrapper.py
src/pose_estimation/: __init__.py  lightweight_pose_wrapper.py  tempo_wrapper.py
src/pose_prediction/: __init__.py  simlpe_wrapper.py
src/reconstruction/: __init__.py  fast_reconstruction.py  monoport_wrapper.py  pifuhd_direct.py  pifuhd_wrapper.py
src/rigging/: __init__.py  unirig_wrapper.py
src/tracking/: __init__.py  person_tracker.py
src/utils/: config.py  pytorch_compat.py
src/websocket/: __init__.py  godot_client.py
tests/: __init__.py  test_config.py  test_main.py
